# simple-kubernetes-deployment--seldon

./: Dockerfile  Makefile  postgres.yaml  postgres_db_configmap.yaml  postgres_secret.yaml  pyproject.toml  webapp.yaml
src/: app.py
