[tool.poetry]
name = "kub-project"
version = "0.1.0"
description = ""
authors = ["emekaborisama <borisphilosophy@gmail.com>"]
packages = []
package-mode = false

[tool.poetry.dependencies]
python = "3.11.10"
fastapi = "^0.115.11"
uvicorn = "^0.34.0"
asyncpg = "^0.30.0"
databases = "^0.9.0"
sqlalchemy = "^2.0.39"
python-dotenv = "^1.0.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
pytest = "^8.3.2"
ragas = "^0.1.16"
notebook = "^7.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
